# simple_deamon

./: .gitignore  CMakeLists.txt  make_root.cpp  serv_deamon.cpp
deamon/: CMakeLists.txt  my_deamon.cpp
include/: cored.h
src/: cored.cpp
support/: CMakeLists.txt  make_root.cpp
